traversal.line.traversalbyline.TraversalByLine.scala.error
Erreur de compilation :
TraversalByLine:20: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int <and> (x: String)String
 required: Int
    setPos(getX()+1,getY()+)
                          ^