traversal.line.traversalbyline.TraversalByLine.scala.code
override def run() {
  var cpt=0
  ecritMessage(0)
  while(!testFin()){
    go()
    cpt+=1
    ecritMessage(cpt)
  }
}

def testFin():Boolean= {
  if(getX()+1==getMondeLargeur && getY()+1==getMondeHauteur){
    return true
  }else{
    return false
  }
}

def go(){
  if(getX()+1<getMondeLargeur){
    setPos(getX()+1,getY()+)
  }else{
    setPos(0,getY()+1)
  }
}